--- a/src/DesignEngine/H.LowCode.MyApp/Pages/DataSourceManager.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/DataSourceManager.razor
@@ -26,6 +26,6 @@
 
     private void OnTabChange(string key)
     {
-        base.NavigateTo($"/myapp/{AppId}/datasource/{key}");
+        //base.NavigateTo($"/myapp/{AppId}/datasource/{key}");
     }
 }
