--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/ComponentPanel/ComponentPanel.razor
@@ -1,8 +1,10 @@
 ﻿@namespace H.LowCode.PartsDesignEngine
 @inherits LowCodeComponentBase
 
-@inject IEnumerable<IComponentProvider> ComponentProviders
-@inject IEnumerable<IPageTemplateProvider> PageTemplateProviders
+@inject IComponentLibraryAppService ComponentLibraryAppService
+@inject IComponentPartsAppService ComponentPartsAppService
+@* @inject ComponentState<ComponentPanel, IList<ComponentLibrarySchema>> ComponentLibrariesState *@
+@inject ComponentState<ComponentPanel, IList<ComponentPartsSchema>> ComponentPartsListState
 
 <Tabs TabPosition="@TabPosition.Left" DefaultActiveKey="1" Class="componentpanel" Size="@TabSize.Small" Style="padding-left:8px;">
     <TabPane Key="1">
@@ -11,34 +13,59 @@
             <Tabs DefaultActiveKey="11" Class="componentpanel" Style="width:270px; padding:0px 4px;">
                 <TabPane Key="11" Tab="组件库">
                     <div style="height:100%; overflow-y: auto;">
-                        @foreach (var componentProvider in ComponentProviders)
+                        @if (_componentPartsList != null)
                         {
-                            <div style="display: inline-block; padding-bottom: 20px;">
-                                <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@componentProvider.Label</div>
-                                @foreach (var component in componentProvider.LoadComponents())
-                                {
-                                    <DragItem Component="component"></DragItem>
-                                }
-                            </div>
+                            @foreach (var component in _componentPartsList)
+                            {
+                                <DragItem Component="component"></DragItem>
+                            }
                         }
                     </div>
                 </TabPane>
                 <TabPane Key="12" Tab="页面库">
                     <div style="height:100%; overflow-y: auto;">
-                        @foreach (var pageTemplateProvider in PageTemplateProviders)
+                        @* @foreach (var pageTemplateProvider in PageTemplateProviders)
                         {
                             <div style="display: inline-block; padding-bottom: 20px;">
                                 <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@pageTemplateProvider.Label</div>
                                 @foreach (var component in pageTemplateProvider.LoadPageTemplate())
                                 {
-                                    @* Style="width: 14.1rem; height: 5rem;" *@
                                     <DragItem Component="component"></DragItem>
                                 }
                             </div>
-                        }
+                        } *@
                     </div>
                 </TabPane>
             </Tabs>
         </ChildContent>
     </TabPane>
 </Tabs>
+
+@code {
+    private IList<ComponentLibrarySchema> _componentLibraries;
+    private IList<ComponentPartsSchema> _componentPartsList;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+
+        // _componentLibraries = await ComponentLibrariesState.GetOrAddAsync(this, async () =>
+        // {
+        //     return await LoadComponentLibraries();
+        // });
+        _componentPartsList = await ComponentPartsListState.GetOrAddAsync(this, async () =>
+        {
+            return await LoadComponentPartsAsync();
+        });
+    }
+
+    private async Task<IList<ComponentLibrarySchema>> LoadComponentLibraries()
+    {
+        return await ComponentLibraryAppService.GetListAsync();
+    }
+
+    private async Task<IList<ComponentPartsSchema>> LoadComponentPartsAsync()
+    {
+        return await ComponentPartsAppService.GetAllComponentsAsync("antdesign");
+    }
+}
