--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/_Imports.razor
@@ -6,6 +6,7 @@
 @using AntDesign
 @using H.LowCode.ComponentBase
 @using H.LowCode.DesignEngine.Abstraction
+@using H.LowCode.DesignEngine.Application.Contracts
 @using H.LowCode.MetaSchema
 @using H.LowCode.PartsMetaSchema
 @using H.LowCode.Model
