--- a/src/DesignEngine/H.LowCode.Workbench/Pages/MyApps.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/MyApps.razor
@@ -109,7 +109,7 @@
     {
         _createVisible = false;
         _editVisible = false;
-        await LoadAppsAsync();
+        _appList = await LoadAppsAsync();
 
         StateHasChanged();
     }
